<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="visible"
    tools:context="com.curso.android.app.practica.proctofinal.MainActivity"
    tools:visibility="visible">

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:layout_marginTop="100dp"
        android:background="@color/cardview_shadow_start_color"
        android:clickable="true"
        android:focusable="true"
        android:hint="@string/stg_1"
        android:importantForAutofill="no"
        android:inputType="text"
        android:labelFor="@android:id/text1"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        android:textSize="32sp"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@color/cardview_shadow_start_color"
        android:clickable="true"
        android:focusable="true"
        android:hint="@string/stg_2"
        android:importantForAutofill="no"
        android:inputType="text"
        android:labelFor="@android:id/text2"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        android:textSize="32sp" />

    <Button
        android:id="@+id/compareBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:text="@string/btn_name"
        android:textColor="#E1BEE7" />


    <TextView
        android:id="@+id/resultText"
        android:layout_width="match_parent"
        android:layout_height="115dp"
        android:layout_margin="16dp"
        android:background="@color/cardview_shadow_start_color"
        android:hint="@string/result"
        android:textColorHint="#546E7A"
        android:textSize="22sp" />

    <Button
        android:id="@+id/clearBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_clear" />

</LinearLayout>